[package]
name = "adq-pingora"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { version = "0.6.0", features = ["lb", "openssl"] }
pingora-core = "0.6.0"
pingora-proxy = "0.6.0"
pingora-load-balancing = "0.6.0"
pingora-limits = "0.6.0"
pingora-cache = "0.6.0"
async-trait = "0.1.89"
tokio = { version = "1.49", features = ["full"] }
log = "0.4.29"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde_json = "1.0"
bytes = "1.11"
http = "1.4"
mime_guess = "2.0"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.21"
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.8"
tokio-test = "0.4"